# cpsat-autotune

./: .pre-commit-config.yaml  LICENSE  README.md  example.ipynb  example_cpsat.py  example_packing.ipynb  min_example.py  optuna_cpsat.ipynb  pyproject.toml
.github/workflows/: pytest.yml  release.yml
models/: packing_model.pb
src/cpsat_autotune/: __init__.py  caching_solver.py  cli.py  cpsat_parameters.py  metrics.py  model_filter.py  model_loading.py  objective.py  parameter_evaluator.py  parameter_space.py  parameter_validation.py  parameters.py  print_result.py  tune.py
tests/: test_not_crashing.py
